chore: update documentation
- revert changes
- update documentation

--- a/.env.example
+++ b/.env.example
@@ -23,13 +23,14 @@ FORCE_SSL=false
 ENABLE_ACCOUNT_SIGNUP=false
 
 # Redis config
+# specify the configs via single URL or individual variables
+# ref: https://www.iana.org/assignments/uri-schemes/prov/redis
+# You can also use the following format for the URL: redis://:password@host:port/db_number
 REDIS_URL=redis://redis:6379
 # If you are using docker-compose, set this variable's value to be any string,
 # which will be the password for the redis service running inside the docker-compose
 # to make it secure
 REDIS_PASSWORD=
-# Database number, default 0
-# REDIS_DB_NUM=0
 # Redis Sentinel can be used by passing list of sentinel host and ports e,g. sentinel_host1:port1,sentinel_host2:port2
 REDIS_SENTINELS=
 # Redis sentinel master name is required when using sentinel, default value is "mymaster".
